Simplify swagger comments
