# app/app/Http/Requests/Authentication/RegisterRequest.php
@@ -6,6 +6,34 @@ use App\Http\Requests\AbstractApiRequest;
 use App\Models\User;
 use Illuminate\Validation\Rules\Unique;
 
+/**
+ *  @OA\Schema(
+ *    @OA\Property(
+ *      property="email",
+ *      example="test@gmail.com",
+ *      description="Email address field <br /> The field is required.",
+ *      type="string"
+ *    ),
+ *    @OA\Property(
+ *      property="password",
+ *      example="test1234",
+ *      description="Password field <br /> The field is required.",
+ *      type="string"
+ *    ),
+ *    @OA\Property(
+ *      property="firstName",
+ *      example="Jan",
+ *      description="First name field <br /> The field is optional.",
+ *      type="string"
+ *    ),
+ *    @OA\Property(
+ *      property="lastName",
+ *      example="Kowalski",
+ *      description="Last name field <br /> The field is optional.",
+ *      type="string"
+ *    ),
+ *  ),
+ */
 class RegisterRequest extends AbstractApiRequest
 {
     /**
